Update publications section with new entries
Updated publication entries to include new papers and images, replacing placeholders with actual content.

--- a/index.html
+++ b/index.html
@@ -162,21 +162,11 @@
           <h2>Publications</h2>
 
           <h3 style="margin:18px 0 8px">Conference Papers</h3>
-          <div class="items">
-            <div class="item">
-              <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/afl-hri21.jpg"pg"g"s.jpg"detracks.jpg"lt="Paper figure" loading="lazy">
-                <div>
-                  <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
-                  <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
-                  <div class="links"><a href="https://arxiv.org/abs/2506.16643" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.16643" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/mattufts/huamn_Cozmo_interaction" target="_blank" rel="noopener">Code</a></div>
-                </div>
-              </div>
-            </div>
+
 
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/charm.png" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
                   <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
@@ -184,6 +174,7 @@
                 </div>
               </div>
             </div>
+
 
             <div class="item">
               <div class="pub-grid">
@@ -196,9 +187,21 @@
               </div>
             </div>
 
+            <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/eyes.png"pg"g"s.jpg"detracks.jpg"lt="Paper figure" loading="lazy">
+                <div>
+                  <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
+                  <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.16643" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.16643" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/mattufts/huamn_Cozmo_interaction" target="_blank" rel="noopener">Code</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="pub-grid">
+                <img class="thumb" src="assets/img/papers/progress.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Qidi Fang, Shijie Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2024</strong>, Pasadena, USA.</div>
@@ -206,10 +209,11 @@
                 </div>
               </div>
             </div>
+          
 
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/steady.png" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Reuben M. Aronson, Katherine H. Allen, Elaine S. Short. <strong>IEEE/RSJ IROS 2023</strong>, Detroit, USA.</div>
@@ -220,7 +224,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/phirl.png" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>AAAI 2026</strong> (under review). Hang Yu, James Staley, Shijie Fang, Jindan Huang, Wenchang Gao, Reuben M. Aronson, Elaine S. Short.</div>
@@ -233,7 +237,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/maxclique.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Top‑K Interesting Preference Rules Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>, Wei Wei. <em>Expert Systems with Applications</em> 143 (2020) 113043.</div>
@@ -243,7 +247,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/contextual-preference-belief.jpg" alt="Contextual Preference Collaborative Measure Framework Based on Belief System" loading="lazy">
+                <div class="pub-grid no-fig">
                 <div>
                   <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing‑lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
@@ -253,7 +257,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/conditional-preference-maxclique.jpg" alt="Conditional Preference Mining Based on MaxClique" loading="lazy">
+                <div class="pub-grid no-fig">
                 <div>
                   <h3>Conditional Preference Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
