Modify publication entries and images in index.html
Updated publication images and metadata in index.html.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
             </div>
 
-            <div class="item">
+            <!-- <div class="item">
               <div class="pub-grid">
                 <img class="thumb" src="assets/img/papers/phirl.png" alt="Paper figure" loading="lazy">
                 <div>
@@ -231,7 +231,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <h3 style="margin:22px 0 8px">Journal Publications</h3>
           <div class="items">
@@ -247,7 +247,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="pub-grid no-fig">
+               <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing‑lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
@@ -257,7 +257,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="pub-grid no-fig">
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Conditional Preference Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
@@ -271,7 +271,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/icra-dc-2025.jpg" alt="ICRA 2025 Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback" loading="lazy">
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback</h3>
                   <div class="meta"><strong>ICRA 2025 Doctoral Consortium</strong>.</div>
@@ -280,7 +280,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/phirl-rssws-2025.jpg" alt="PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning — RSS Workshop 2025" loading="lazy">
+                <img class="thumb" src="assets/img/papers/phirl.jpg" alt="PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning — RSS Workshop 2025" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>RSS Workshop 2025</strong>.</div>
@@ -289,7 +289,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/active.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Active Feedback Learning with Rich Feedback</h3>
                   <div class="meta"><strong>HRI ’21 Companion</strong>.</div>
