--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .callout { border: 1px dashed rgba(0,0,0,.14); padding: 14px 16px; border-radius: 12px; background: rgba(0,0,0,.02); }
 
     /* publications layout */
-    .pub-grid { display: grid; grid-template-columns: 480px 1fr; gap: 18px; align-items: start; }
+    .pub-grid { display: grid; grid-template-columns: 2fr 1fr; gap: 18px; align-items: start; }
     @media (max-width: 900px){ .pub-grid { grid-template-columns: 1fr; } }
     .thumb { width: 100%; aspect-ratio: 16/9; border-radius: 14px; display: block; object-fit: cover; }
     .thumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 0; }
@@ -82,6 +82,13 @@
     .latest-list li { margin: 6px 0; }
 
     
+    /* Hide figure & collapse to one column when wanted */
+    .pub-grid.no-fig { grid-template-columns: 1fr; }
+    .pub-grid.no-fig .thumb { display: none; }
+    /* If the browser supports :has, also collapse automatically when there is no .thumb */
+    @supports selector(:has(*)){
+      .pub-grid:not(:has(.thumb)) { grid-template-columns: 1fr; }
+    }
   </style>
 </head>
 <body>
@@ -162,35 +169,10 @@
           <h2>Publications</h2>
 
           <h3 style="margin:18px 0 8px">Conference Papers</h3>
-
-
+          <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/charm.png" alt="Paper figure" loading="lazy">
-                <div>
-                  <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
-                  <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
-                  <div class="links"><a href="https://arxiv.org/abs/2506.13079" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.13079" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/CHARM" target="_blank" rel="noopener">Code</a></div>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="item">
-              <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/sidetrack.jpg" alt="Paper figure" loading="lazy">
-                <div>
-                  <h3>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</h3>
-                  <div class="meta">Shijie Fang*, <strong>Hang Yu*</strong>, Qidi Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
-                  <div class="links"><a href="https://arxiv.org/abs/2506.11262" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.11262" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/Human-Demonstration-Sidetracks" target="_blank" rel="noopener">Dataset/Code</a></div>
-                </div>
-              </div>
-            </div>
-
-            <div class="items">
-            <div class="item">
-              <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/eyes.png"pg"g"s.jpg"detracks.jpg"lt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/see-what-i-mean.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
                   <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
@@ -201,7 +183,29 @@
 
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/progress.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/charm.jpg" alt="Paper figure" loading="lazy">
+                <div>
+                  <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
+                  <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.13079" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.13079" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/CHARM" target="_blank" rel="noopener">Code</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="pub-grid">
+                <img class="thumb" src="assets/img/papers/demonstration-sidetracks.jpg" alt="Paper figure" loading="lazy">
+                <div>
+                  <h3>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</h3>
+                  <div class="meta">Shijie Fang*, <strong>Hang Yu*</strong>, Qidi Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.11262" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.11262" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/Human-Demonstration-Sidetracks" target="_blank" rel="noopener">Dataset/Code</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="pub-grid">
+                <img class="thumb" src="assets/img/papers/how-much-progress.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Qidi Fang, Shijie Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2024</strong>, Pasadena, USA.</div>
@@ -209,11 +213,10 @@
                 </div>
               </div>
             </div>
-          
 
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/steady.png" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/scalar-feedback-irl.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Reuben M. Aronson, Katherine H. Allen, Elaine S. Short. <strong>IEEE/RSJ IROS 2023</strong>, Detroit, USA.</div>
@@ -222,22 +225,22 @@
               </div>
             </div>
 
-            <!-- <div class="item">
+            <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/phirl.png" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/phirl.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>AAAI 2026</strong> (under review). Hang Yu, James Staley, Shijie Fang, Jindan Huang, Wenchang Gao, Reuben M. Aronson, Elaine S. Short.</div>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <h3 style="margin:22px 0 8px">Journal Publications</h3>
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/maxclique.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/topk-maxclique.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Top‑K Interesting Preference Rules Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>, Wei Wei. <em>Expert Systems with Applications</em> 143 (2020) 113043.</div>
@@ -247,7 +250,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-               <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/contextual-preference-belief.jpg" alt="Contextual Preference Collaborative Measure Framework Based on Belief System" loading="lazy">
                 <div>
                   <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing‑lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
@@ -257,7 +260,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/conditional-preference-maxclique.jpg" alt="Conditional Preference Mining Based on MaxClique" loading="lazy">
                 <div>
                   <h3>Conditional Preference Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
@@ -271,7 +274,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/icra-dc-2025.jpg" alt="ICRA 2025 Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback" loading="lazy">
                 <div>
                   <h3>Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback</h3>
                   <div class="meta"><strong>ICRA 2025 Doctoral Consortium</strong>.</div>
@@ -280,7 +283,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/phirl.jpg" alt="PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning — RSS Workshop 2025" loading="lazy">
+                <img class="thumb" src="assets/img/papers/phirl-rssws-2025.jpg" alt="PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning — RSS Workshop 2025" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>RSS Workshop 2025</strong>.</div>
@@ -289,7 +292,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/active.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/afl-hri21.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Active Feedback Learning with Rich Feedback</h3>
                   <div class="meta"><strong>HRI ’21 Companion</strong>.</div>
