Replace JPG with PNG image in index.html

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
           </div>
 
           <!-- NEW: two small figures spanning the full section width -->
-          <div class="ri-figs">
-            <img src="assets/img/interests-1.jpg" alt="Human teaching a robot with demonstrations" loading="lazy">
+<div class="ri-figs" style="margin-top: 2rem;">
+            <img src="assets/img/interests-1.png" alt="Human teaching a robot with demonstrations" loading="lazy">
             <img src="assets/img/interests-2.jpg" alt="Robot learning from rich human feedback interface" loading="lazy">
           </div>
         </section>
