--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .callout { border: 1px dashed rgba(0,0,0,.14); padding: 14px 16px; border-radius: 12px; background: rgba(0,0,0,.02); }
 
     /* publications layout */
-    .pub-grid { display: grid; grid-template-columns: 2fr 1fr; gap: 18px; align-items: start; }
+    .pub-grid { display: grid; grid-template-columns: 360px 1fr; gap: 18px; align-items: start; }
     @media (max-width: 900px){ .pub-grid { grid-template-columns: 1fr; } }
     .thumb { width: 100%; aspect-ratio: 16/9; border-radius: 14px; display: block; object-fit: cover; }
     .thumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 0; }
