--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hang Yu | Tufts University</title>
-  <meta name="description" content="Hang Yu — Human-Robot Interaction & Robot Learning at Tufts University" />
+  <meta charset="utf-8">
+  <title>Hang Yu | Tufts University | HRI & Robot Learning</title>
+  <meta name="description" content="Ph.D. candidate at Tufts University working on Human–Robot Interaction (HRI), RLHF, and Imitation Learning.">
+  <link rel="canonical" href="https://hangyu8123.github.io/">
+  <meta name="robots" content="index, follow, max-image-preview:large">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Hang Yu | Tufts University | HRI & Robot Learning">
+  <meta property="og:url" content="https://hangyu8123.github.io/">
+  <meta property="og:image" content="https://hangyu8123.github.io/assets/img/icon.jpg">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
