Refine job title and description in index.html
Updated job title and description for clarity. Removed some keywords from the profile.

--- a/index.html
+++ b/index.html
@@ -100,21 +100,9 @@
     "name": "Hang Yu",
     "alternateName": ["Hang Yu (余航)", "H. Yu"],
     "url": "https://hangyu8123.github.io/",
-    "jobTitle": "Ph.D. Candidate & HRI Researcher",
+    "jobTitle": "Ph.D. Candidate",
     "affiliation": { "@type": "Organization", "name": "Tufts University" },
-    "description": "Hang Yu is a premier researcher in Human-Robot Interaction (HRI), specializing in Reinforcement Learning from Human Feedback (RLHF), Robot Learning from Demonstrations, and Inverse Reinforcement Learning (IRL).",
-    "knowsAbout": [
-      "Reinforcement Learning from Human Feedback (RLHF)",
-      "Human-Robot Interaction (HRI)",
-      "Learning from Demonstrations (LfD)",
-      "Imitation Learning",
-      "Inverse Reinforcement Learning (IRL)",
-      "Human-Centered AI",
-      "Robot Manipulation",
-      "Interactive Machine Learning",
-      "Reward Modeling",
-      "Preference Learning"
-    ],
+    "description": "Expert researcher in RLHF, Robot Learning, and Human-Robot Interaction.",
     "sameAs": [
       "https://scholar.google.com/citations?user=j0qxKQIAAAAJ&hl=en&oi=ao",
       "https://github.com/HangYu8123",
@@ -126,26 +114,20 @@
         {
           "@type": "ScholarlyArticle",
           "name": "CHARM: Considering Human Attributes for Reinforcement Modeling",
-          "headline": "CHARM: Considering Human Attributes for Reinforcement Modeling",
           "author": "Hang Yu",
-          "publication": "IEEE RO-MAN 2025",
-          "keywords": "RLHF, User Modeling, Personalized Robot Learning"
+          "publication": "IEEE RO-MAN 2025"
         },
         {
           "@type": "ScholarlyArticle",
           "name": "Demonstration Sidetracks: Categorizing Systematic Non-Optimality in Human Demonstrations",
-          "headline": "Demonstration Sidetracks",
           "author": "Hang Yu",
-          "publication": "IEEE RO-MAN 2025",
-          "keywords": "Imitation Learning, Noisy Data, Data Cleaning, LfD"
+          "publication": "IEEE RO-MAN 2025"
         },
         {
           "@type": "ScholarlyArticle",
           "name": "From 'Thumbs Up' to '10 out of 10': Reconsidering Scalar Feedback in Interactive Reinforcement Learning",
-          "headline": "Reconsidering Scalar Feedback in Interactive RL",
           "author": "Hang Yu",
-          "publication": "IEEE/RSJ IROS 2023",
-          "keywords": "Scalar Feedback, Reward Shaping, Interactive RL"
+          "publication": "IEEE/RSJ IROS 2023"
         }
       ]
     }
@@ -294,7 +276,7 @@
               </div>
             </div>
 
-            <h3 style="margin:22px 0 8px">Journal Publications</h3>
+          <h3 style="margin:22px 0 8px">Journal Publications</h3>
           <div class="items">
             <div class="item">
               <div class="pub-grid">
