--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
           <h2>Latest</h2>
           <ul class="latest-list">
             <!-- <li><strong>Aug 2025</strong> — Conference: <em>See What I Mean? Expressiveness and Clarity in Robot Display Design</em>, <strong>IEEE RO-MAN 2025</strong>.</li> -->
-            <li><strong>Aug 2025</strong> — Conference: <em>CHARM: Considering Human Attributes for Reinforcement Modeling</em>, <strong>IEEE RO-MAN 2025</strong>.</li>
-            <li><strong>Aug 2025</strong> — Conference: <em>Demonstration Sidetracks: Categorizing Systematic Non-Optimality in Human Demonstrations</em>, <strong>IEEE RO-MAN 2025</strong>.</li>
+            <li><strong>Aug 2025</strong> — Mentoring: <em> I published <strong>THREE PAPERS</strong> with my mentees </em>, <strong>IEEE RO-MAN 2025</strong>.</li>
+            <!-- <li><strong>Aug 2025</strong> — Conference: <em>Demonstration Sidetracks: Categorizing Systematic Non-Optimality in Human Demonstrations</em>, <strong>IEEE RO-MAN 2025</strong>.</li> -->
             <li><strong>May 2025</strong> — Awards: <em>My paper Enabling Robust Learning from Non-Experts by Leveraging Human Demonstrations and Human Feedback was selected forthe  Doctoral Consortium by </em>, <strong>IEEE ICRA 2025</strong>.</li>
             <li><strong>Aug 2024</strong> — Awards: <em>I was granted to Student Travel Awards by</em>, <strong>IEEE RO-MAN 2024</strong>.</li>
             <li><strong>Oct 2023</strong> — Conference: <em>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</em>, <strong>IEEE/RSJ IROS 2023</strong>.</li>
