--- a/index.html
+++ b/index.html
@@ -202,144 +202,115 @@
         </section>
 
 <style>
-  /* Container Styling */
-  .news-section {
+  /* Container for the whole section */
+  .news-container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 800px; /* Adjust width as needed */
-    margin: 20px 0;
+    width: 100%;
+    max-width: 800px; /* Adjust width */
+    background: #fff;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+    overflow: hidden; /* Hides the content that scrolls out */
   }
 
   .news-header {
+    background-color: #f7f7f7;
     padding: 15px 20px;
     border-bottom: 1px solid #eaeaea;
     margin: 0;
-    background-color: #f9f9f9;
-    border-radius: 8px 8px 0 0;
+    font-size: 1.2rem;
+    color: #333;
+    z-index: 10;
+    position: relative;
   }
 
-  /* The Sliding Bar (Scrollable Area) */
-  .scroll-container {
-    max-height: 250px; /* Adjust height to control when scrollbar appears */
-    overflow-y: auto;
-    padding: 0;
-    margin: 0;
+  /* The window through which we see the news */
+  .news-window {
+    height: 200px; /* Adjust this to show more/less items at once */
+    overflow: hidden;
+    position: relative;
+    background-color: #ffffff;
+  }
+
+  /* The actual moving list */
+  .news-list {
     list-style: none;
+    margin: 0;
+    padding: 0;
+    /* Animation: Name | Duration | Timing | Iteration */
+    animation: scrollUp 20s linear infinite; 
   }
 
-  /* Custom Scrollbar Styling (Webkit browsers) */
-  .scroll-container::-webkit-scrollbar {
-    width: 8px;
-  }
-  .scroll-container::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  .scroll-container::-webkit-scrollbar-thumb {
-    background: #ccc;
-    border-radius: 4px;
-  }
-  .scroll-container::-webkit-scrollbar-thumb:hover {
-    background: #aaa;
+  /* PAUSE ON HOVER - Essential for usability */
+  .news-window:hover .news-list {
+    animation-play-state: paused;
   }
 
-  /* List Items */
   .news-item {
     padding: 15px 20px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #f0f0f0;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    transition: background-color 0.2s;
-  }
-  
-  .news-item:last-child {
-    border-bottom: none;
   }
 
-  .news-item:hover {
-    background-color: #fcfcfc;
+  /* Define the animation */
+  /* We scroll -50% because we duplicated the list. 
+     Once it hits -50%, it snaps back to 0% instantly. */
+  @keyframes scrollUp {
+    0%   { transform: translateY(0); }
+    100% { transform: translateY(-50%); }
   }
 
-  /* Date Styling */
-  .news-date {
-    font-size: 0.85rem;
-    color: #666;
-    font-weight: 600;
-    margin-bottom: 4px;
-  }
-
-  /* The "Signboys" (Badges) */
+  /* Signboys / Badges */
   .badge {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     padding: 2px 8px;
     border-radius: 4px;
     font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
     margin-right: 8px;
-    vertical-align: middle;
   }
 
   /* Badge Colors */
-  .badge-conf { background-color: #e3f2fd; color: #1565c0; border: 1px solid #bbdefb; } /* Blue */
-  .badge-award { background-color: #fff8e1; color: #f57f17; border: 1px solid #ffecb3; } /* Gold */
-  .badge-mentor { background-color: #e8f5e9; color: #2e7d32; border: 1px solid #c8e6c9; } /* Green */
+  .bg-conf   { background: #e3f2fd; color: #1565c0; border: 1px solid #bbdefb; }
+  .bg-award  { background: #fff8e1; color: #f57f17; border: 1px solid #ffecb3; }
+  .bg-mentor { background: #e8f5e9; color: #2e7d32; border: 1px solid #c8e6c9; }
 
-  /* Text Content */
-  .news-content {
-    font-size: 0.95rem;
-    line-height: 1.5;
-    color: #333;
-  }
-
-  .venue {
-    font-weight: 700;
-    color: #000;
-  }
+  .date { font-size: 0.85rem; color: #888; font-weight: 600; }
+  .content { font-size: 0.95rem; color: #333; line-height: 1.4; }
+  .venue { font-weight: bold; color: #000; }
 </style>
 
-<section id="latest" class="news-section">
+<section id="latest" class="news-container">
   <h2 class="news-header">Latest News</h2>
   
-  <ul class="scroll-container">
-    
-    <li class="news-item">
-      <div class="news-date">Aug 2025</div>
-      <div class="news-content">
-        <span class="badge badge-mentor">Mentoring</span>
-        Co-first-authored <strong>THREE PAPERS</strong> with my mentees at <span class="venue">IEEE RO-MAN 2025</span>.
-      </div>
-    </li>
+  <div class="news-window">
+    <ul class="news-list">
+      
+      <li class="news-item">
+        <div class="date">Aug 2025</div>
+        <div class="content">
+          <span class="badge bg-mentor">🎓 Mentoring</span>
+          Co-authored <strong>three papers</strong> with my mentees at <span class="venue">IEEE RO-MAN 2025</span>.
+        </div>
+      </li>
 
-    <li class="news-item">
-      <div class="news-date">May 2025</div>
-      <div class="news-content">
-        <span class="badge badge-award">Award</span>
-        Selected for the <strong>Doctoral Consortium</strong>: <em>"Enabling Robust Learning from Non-Experts by Leveraging Human Demonstrations and Human Feedback"</em> at <span class="venue">IEEE ICRA 2025</span>.
-      </div>
-    </li>
+      <li class="news-item">
+        <div class="date">May 2025</div>
+        <div class="content">
+          <span class="badge bg-award">🏆 Award</span>
+          Selected for the <strong>Doctoral Consortium</strong>: <em>"Enabling Robust Learning from Non-Experts"</em> at <span class="venue">IEEE ICRA 2025</span>.
+        </div>
+      </li>
 
-    <li class="news-item">
-      <div class="news-date">Aug 2024</div>
-      <div class="news-content">
-        <span class="badge badge-award">Award</span>
-        Recipient of the <strong>Student Travel Award</strong> at <span class="venue">IEEE RO-MAN 2024</span>.
-      </div>
-    </li>
-
-    <li class="news-item">
-      <div class="news-date">Oct 2023</div>
-      <div class="news-content">
-        <span class="badge badge-conf">Conference</span>
-        Published <em>"From 'Thumbs Up' to '10 out of 10': Reconsidering Scalar Feedback in Interactive Reinforcement Learning"</em> at <span class="venue">IEEE/RSJ IROS 2023</span>.
-      </div>
-    </li>
-
-  </ul>
-</section>
+      <li class="news-item">
+        <div class="date">Aug 2024</div>
+        <div class="content">
+          <span class="badge bg-award">🏆 Award</span>
 
         <section id="publications" style="margin-top:20px">
           <h2>Publications</h2>
