--- a/index.html
+++ b/index.html
@@ -202,115 +202,151 @@
         </section>
 
 <style>
-  /* Container for the whole section */
-  .news-container {
+  /* Main Container */
+  .news-static-container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 100%;
-    max-width: 800px; /* Adjust width */
-    background: #fff;
+    max-width: 800px; /* Adjust width as needed */
+    background: #ffffff;
     border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-    overflow: hidden; /* Hides the content that scrolls out */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05); /* Subtle shadow */
+    margin-top: 20px;
   }
 
+  /* Header Section */
   .news-header {
-    background-color: #f7f7f7;
+    background-color: #f9f9f9;
     padding: 15px 20px;
     border-bottom: 1px solid #eaeaea;
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1.25rem;
     color: #333;
-    z-index: 10;
-    position: relative;
+    border-radius: 8px 8px 0 0;
   }
 
-  /* The window through which we see the news */
-  .news-window {
-    height: 200px; /* Adjust this to show more/less items at once */
-    overflow: hidden;
-    position: relative;
-    background-color: #ffffff;
-  }
-
-  /* The actual moving list */
-  .news-list {
+  /* The List */
+  .news-list-static {
     list-style: none;
-    margin: 0;
     padding: 0;
-    /* Animation: Name | Duration | Timing | Iteration */
-    animation: scrollUp 20s linear infinite; 
+    margin: 0;
   }
 
-  /* PAUSE ON HOVER - Essential for usability */
-  .news-window:hover .news-list {
-    animation-play-state: paused;
-  }
-
+  /* Individual Items */
   .news-item {
-    padding: 15px 20px;
+    padding: 18px 20px;
     border-bottom: 1px solid #f0f0f0;
     display: flex;
-    flex-direction: column;
-    gap: 5px;
+    flex-direction: column; /* Stack date on top of text */
+    gap: 6px;
+    transition: background-color 0.2s ease;
   }
 
-  /* Define the animation */
-  /* We scroll -50% because we duplicated the list. 
-     Once it hits -50%, it snaps back to 0% instantly. */
-  @keyframes scrollUp {
-    0%   { transform: translateY(0); }
-    100% { transform: translateY(-50%); }
+  /* Remove border from the very last item */
+  .news-item:last-child {
+    border-bottom: none;
   }
 
-  /* Signboys / Badges */
+  /* Hover Effect */
+  .news-item:hover {
+    background-color: #fafafa;
+  }
+
+  /* Date Styling */
+  .news-date {
+    font-size: 0.85rem;
+    color: #888;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+  }
+
+  /* Content Text */
+  .news-content {
+    font-size: 0.95rem;
+    line-height: 1.5;
+    color: #222;
+  }
+
+  /* Bold Venue Text */
+  .venue {
+    font-weight: 700;
+    color: #000;
+  }
+
+  /* --- SIGNBOYS (Badges) --- */
   .badge {
     display: inline-flex;
     align-items: center;
-    padding: 2px 8px;
+    padding: 3px 8px;
     border-radius: 4px;
     font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
     margin-right: 8px;
+    white-space: nowrap; /* Prevents badge text from breaking */
   }
 
   /* Badge Colors */
-  .bg-conf   { background: #e3f2fd; color: #1565c0; border: 1px solid #bbdefb; }
-  .bg-award  { background: #fff8e1; color: #f57f17; border: 1px solid #ffecb3; }
-  .bg-mentor { background: #e8f5e9; color: #2e7d32; border: 1px solid #c8e6c9; }
-
-  .date { font-size: 0.85rem; color: #888; font-weight: 600; }
-  .content { font-size: 0.95rem; color: #333; line-height: 1.4; }
-  .venue { font-weight: bold; color: #000; }
+  /* Mentoring: Green */
+  .bg-mentor { 
+    background-color: #e8f5e9; 
+    color: #2e7d32; 
+    border: 1px solid #c8e6c9; 
+  }
+  
+  /* Awards: Gold/Orange */
+  .bg-award { 
+    background-color: #fff8e1; 
+    color: #f57f17; 
+    border: 1px solid #ffecb3; 
+  }
+  
+  /* Papers/Conference: Blue */
+  .bg-conf { 
+    background-color: #e3f2fd; 
+    color: #1565c0; 
+    border: 1px solid #bbdefb; 
+  }
 </style>
 
-<section id="latest" class="news-container">
+<section id="latest" class="news-static-container">
   <h2 class="news-header">Latest News</h2>
   
-  <div class="news-window">
-    <ul class="news-list">
-      
-      <li class="news-item">
-        <div class="date">Aug 2025</div>
-        <div class="content">
-          <span class="badge bg-mentor">🎓 Mentoring</span>
-          Co-authored <strong>three papers</strong> with my mentees at <span class="venue">IEEE RO-MAN 2025</span>.
-        </div>
-      </li>
+  <ul class="news-list-static">
+    
+    <li class="news-item">
+      <div class="news-date">Aug 2025</div>
+      <div class="news-content">
+        <span class="badge bg-mentor">🎓 Mentoring</span>
+        Co-authored <strong>three papers</strong> with my mentees at <span class="venue">IEEE RO-MAN 2025</span>.
+      </div>
+    </li>
 
-      <li class="news-item">
-        <div class="date">May 2025</div>
-        <div class="content">
-          <span class="badge bg-award">🏆 Award</span>
-          Selected for the <strong>Doctoral Consortium</strong>: <em>"Enabling Robust Learning from Non-Experts"</em> at <span class="venue">IEEE ICRA 2025</span>.
-        </div>
-      </li>
+    <li class="news-item">
+      <div class="news-date">May 2025</div>
+      <div class="news-content">
+        <span class="badge bg-award">🏆 Award</span>
+        Selected for the <strong>Doctoral Consortium</strong>: <em>"Enabling Robust Learning from Non-Experts"</em> at <span class="venue">IEEE ICRA 2025</span>.
+      </div>
+    </li>
 
-      <li class="news-item">
-        <div class="date">Aug 2024</div>
-        <div class="content">
-          <span class="badge bg-award">🏆 Award</span>
+    <li class="news-item">
+      <div class="news-date">Aug 2024</div>
+      <div class="news-content">
+        <span class="badge bg-award">🏆 Award</span>
+        Recipient of the <strong>Student Travel Award</strong> at <span class="venue">IEEE RO-MAN 2024</span>.
+      </div>
+    </li>
+
+    <li class="news-item">
+      <div class="news-date">Oct 2023</div>
+      <div class="news-content">
+        <span class="badge bg-conf">📄 Paper</span>
+        Published <em>"From 'Thumbs Up' to '10 out of 10'"</em> at <span class="venue">IEEE/RSJ IROS 2023</span>.
+      </div>
+    </li>
+
+  </ul>
+</section>
 
         <section id="publications" style="margin-top:20px">
           <h2>Publications</h2>
