Revise personal description and improve layout
Updated research focus and added details about teaching methods and data sources. Adjusted layout and styling for better presentation.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div class="inner">
         <div class="hero">
           <h1>Hang Yu (余航)</h1>
-          <p>Ph.D. Candidate, <strong>Tufts University</strong>. My research explores <em>Human–Robot Interaction</em> (HRI) and <em>human-in-the-loop robot learning</em>, with a focus on learning from human feedback and demonstrations to enable natural and expressive interactions.</p>
+          <p>Ph.D. Candidate, <strong>Tufts University</strong>. My research focuses on <em>Human–Robot Interaction</em> (HRI), <em>human-in-the-loop learning</em>, <em>RLHF</em>, and <em>Imitation Learning</em>.</p>
         </div>
 
         <div class="social">
@@ -197,7 +197,7 @@
       <div class="inner">
         <section id="about">
           <h2>About</h2>
-          <p>I am a Ph.D. candidate in Computer Science at Tufts University, advised by faculty in <a href="https://aabl.cs.tufts.edu/" target="_blank" rel="noopener">Accessible and Applied Robotics Lab (AABL)</a>. I study how people teach robots and how robots can learn effectively from rich, scalar, and structured feedback. My long-term goal is to make robot learning from everyday people robust, sample-efficient, and accessible.</p>
+          <p>I am a Ph.D. candidate in Computer Science at Tufts University, advised by Dr.Elaine Short in <a href="https://aabl.cs.tufts.edu/" target="_blank" rel="noopener">Accessible and Applied Robotics Lab (AABL)</a>. I work on improving robot learning from multi-modular human teaching, including human feedback, human demonstrations, and outputs from VLM/LLM. Most of my data is open-sourced and collected from public spaces with real-world non-expert users.</p>
           <div class="callout muted">Actively open to research collaborations in HRI, RLHF for robots, and human data collection methodology.</div>
         </section>
 
@@ -205,7 +205,7 @@
   /* Main Container */
   .news-static-container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 800px; /* Adjust width as needed */
+    max-width: 920px; /* Adjust width as needed */
     background: #ffffff;
     border: 1px solid #e0e0e0;
     border-radius: 8px; /* Rounded corners */
@@ -309,7 +309,7 @@
 </style>
 
 <section id="latest" class="news-static-container">
-  <h2 class="news-header">Latest News</h2>
+  <h2 class="news-header">News</h2>
   
   <ul class="news-list-static">
     
@@ -506,7 +506,12 @@
             </div>
             <div class="item">
               <div class="kicker">Honors & Awards</div>
-              <div class="meta">ICRA Doctoral Consortium (2025); RO-MAN Travel Grant (2024); Yantai University Outstanding Student Scholarship (2017); Lanqiao Programming Competition National First Prize (2016).</div>
+              <ul class="meta-list">
+  <li><strong>2025:</strong> ICRA Doctoral Consortium</li>
+  <li><strong>2024:</strong> RO-MAN Travel Grant</li>
+  <li><strong>2017:</strong> Yantai University Outstanding Student Scholarship</li>
+  <li><strong>2016:</strong> Lanqiao Programming Competition National First Prize</li>
+</ul>
             </div>
           </div>
         </section>
